--- a/appspec.ReactDeploymentGroup.yml
+++ b/appspec.ReactDeploymentGroup.yml
@@ -5,6 +5,11 @@ files:
     destination: /var/www/html
 
 hooks:
+  BeforeInstall:
+    - location: scripts/clean_html_directory.sh
+      timeout: 300
+      runas: root
+
   AfterInstall:
     - location: scripts/restart_server.sh
       timeout: 300
